--- a/.gitignore
+++ b/.gitignore
@@ -158,9 +158,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+#Manually added
 config.json
 chromedriver
 latest.pdf
 out.jpg
 output/page.jpg
 output/page.jpg
+temp
+config
