--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,6 @@ name: Docker Image CI
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
 
@@ -18,6 +16,7 @@ jobs:
       with:
         image_name: ${{ github.repository }}  # it will be lowercased internally
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        image_tag: latest
         # optionally push to the Docker Hub (docker.io)
         # docker_io_token: ${{ secrets.DOCKER_IO_ACCESS_TOKEN }}  # see https://hub.docker.com/settings/security
         # customize the username to be used when pushing to the Docker Hub
