--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 APScheduler==3.10.4
 attrs==23.2.0
 beautifulsoup4==4.12.3
+bidict==0.23.1
 blinker==1.8.2
 certifi==2024.2.2
 cffi==1.16.0
@@ -8,6 +9,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-SocketIO==5.3.6
 h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
@@ -18,8 +20,11 @@ packaging==24.0
 pycparser==2.22
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
+python-engineio==4.9.0
+python-socketio==5.11.2
 pytz==2024.1
 requests==2.31.0
+simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -31,6 +36,5 @@ typing_extensions==4.11.0
 tzdata==2024.1
 tzlocal==5.2
 urllib3==2.2.1
-waitress==3.0.0
 Werkzeug==3.0.3
 wsproto==1.2.0
